hphp/test/zend/bad/ext/dom/tests/DOMDocument_loadHTMLfile_variation1.php
<?php
$doc = new DOMDocument();
$result = $doc->loadHTMLFile(dirname(__FILE__) . "/empty.html");
assert('$result === true');
?>
